--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rainblock/merkle-patricia-tree": "^4.0.0",
     "async-chunks": "^1.1.0",
     "benchmark": "^2.1.4",
+    "console-stamp": "^0.2.7",
     "ethereumjs-util": "^6.1.0",
     "fs-extra": "^7.0.1",
     "merkle-patricia-tree": "^3.0.0",
